--- a/index.html
+++ b/index.html
@@ -1,134 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ssb611</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>SSB611</title>
+	<!--css links-->
+	<link rel="stylesheet" href="css/style.css">
 </head>
+<!--header start-->
+<header>
+	<div class="container">
+	   <div class="logo">
+		 <a href="index.html">
+			<img src="images/logo.png" alt="Minimo">
+		</a>
+		</div>
+<nav class="menu">
+        	<ul>
+        		<li><a href="#">lifestyle</a></li>
+        		<li><a href="#">photodiary</a></li>
+                <li><a href="#">music</a></li>
+        		<li><a href="#">travel</a></li>
+               </ul>
+		</nav>
+	</div>
+</header>
+<!--header end-->
+
 <body>
-   <!-- header start-->
-<h1>Home</h1>
-<!--
-<h2>what is lorem ipsum?</h2>
-<h3>what is lorem ipsum?</h3>
-<h4>what is lorem ipsum?</h4>
-<h5>what is lorem ipsum?</h5>
-<h6>what is lorem ipsum?</h6>
- -->
-<!-- 
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-  -->
 
-  <!-- 
-<img src="images/flower.jpg" alt="">
-<a href="https://web.facebook.com/?ref=homescreenpwa&_rdc=1&_rdr" target="-blank">Facebook</a>
-<a>Youtube</a>
--->
-
-<a href="index.html">Home</a>
-<a href="pages/about/about.html">About</a>
-
-<abbr title="world health organization">WHO</abbr>
-
-<address>
-Written by <a href="file:///C:/Users/Lamia202outlook.com">Lamia</a>.<br>
-Visit us at:<br>
-Example.com<br>
-Box 564, Dhaka,mirpur<br>
-BD
-</address>
-
-<h1>The article element</h1>
-
-<article>
-<h2>weather</h2>
-<p>the prevailing mild to very severe heat wave over the country may continue.Due to increasing moisture incursion,the discomfort may increase.the common people are suffering from very badly for the current heat wave . </p>
-
-<h2>JU campus</h2>
-<p>Jahangirnagar University (abbreviated as JU) is a public research university located in Savar, Dhaka, Bangladesh. It was established in 1970. people called it the ground heaven because of its green natural beauty .the biodiversity in ju campus makes it more beautiful</p>
-
-<h3>sundarbans</h3>
-<p>the sundarbans, a UNESCO World heritage site sprawling across the delta of the ganges Brahmaputra,and Meghna rivers,is a mesmirizing natural wonder land.</p>
-
-</article>
-
-<h1>The aside element</h1>
-<p>my family annd i visited the sylhet last year. we visited the tea garden and some of holly place of sylhet like shahjalal and shahporan mazar.</p>
-<h3>the tea garden</h3>
-<aside>as we visited tis place in winter the weather of tea garden and the natural beauty of tea garden was mesmerizing and wonderful. i had a great vacation together with my family.
-</aside>
-
-<h1>The audio element</h1>
-<p>click on the play button to play a sound</p>
-<audio controls>
-<source src="horse.mp3" type="audio/mpeg">
-</audio>
-
-<p>this is normal text & <b>this is bold text</b></p>
-
-<h1>The bdo element</h1>
-
-<p>This paragraph will go left-to-right.</p>  
-<p><bdo dir="rtl">This paragraph will go right to left</bdo></p>
-
-<h2>the button</h2>
-<button type="button" onclick="alert (Hello world)"> Click me!</button>
-
-<h2>The caption element</h2>
-    <table border="2">
-
-     <colgroup>
-    <col span="1" style="background-color:red">
-    <col style="background-color:yellow">
-  </colgroup>
-
-    <caption>monthly savings</caption>
-    <tr>
-    <th>month</th>
-    <th>savings</th>
-    </tr>
-    <tr>
-        <td>january</td>
-        <td>$100</td>
-    </tr>
-    <tr>
-        <td>february</td>
-        <td>$50</td>
-    </tr>
-</table>
-
-<h2>the cite element</h2>
-<img src="images/the scream.jpg" width="220" height="277" alt="the scream">
-<p><cite>the scream</cite>by Edward Munch,painted by 1893</p>
-
-<h2> the data element</h2>
-<p> the following examples displays products name but also associates each name with product number</p>
-<ul>
-    <li> <data value="1">cherry tomatoo</li>
-    <li><data value="2">beef tomatoo</li>
-    <li><data value="3">snack timatoo</li>
-</ul>
-
-<h2>the dd list</h2>
-
-<dl>
-    <dt>coffee</dt>
-    <dd>black hot drink</dd>
-    <dt>water</dt>
-    <dd>white cold drink</dd>
-</dl>
-
-<h2>the del element</h2>
-<p>my favourite color is <del>blue</del> <ins>red</ins></p>
-
-<h2>thhe details element</h2>
-<details>
-    <summary>Epcot center</summary>
-    <p>Epcot is a theme park at walt disney world resort featuring excitement attractions ,international pavilions award winning fireworks and seasonal special events</p>
-</details>
-
-<h2>the dfn element</h2>
-<p><dfn>html</dfn> is the standard markup languaage for creating web pages</p>
 </body>
-</html>
+</html
+
+ font-family: "Playfair Display", serif;
+ gray-#626262
